first working version new batch iteration procedures, as described in jar paper